# Canopy

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.ipynb  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  python-app.yml  repo-release-sync.yaml
canopy/: __init__.py  adat.py  annotations.py  errors.py
canopy/base/: __init__.py  adat_math_helpers.py  adat_meta_helpers.py
canopy/data/: example_data.py
canopy/io/: file.py
canopy/io/adat/: file.py
canopy/io/annotations/: file.py
canopy/tools/: adat_concatenation.py  background.py  math.py  pandas.py
docs/: pythoncodeblocks.tpl
docs/source/: adat.rst  conf.py  index.rst
somadata/: __init__.py  adat.py  annotations.py
somadata/base/: __init__.py  adat_math_helpers.py  adat_meta_helpers.py
somadata/data/: example_data.py  lift.py
somadata/io/adat/: file.py
somadata/io/annotations/: file.py
somadata/tools/: adat_concatenation.py  pandas.py
tests/: conftest.py  test_adat_concatenation.py  test_adat_concatenation_utils.py  test_adat_math_helpers.py  test_adat_metadata_helpers.py  test_adat_reading.py  test_adat_writing.py  test_annotation_lifting.py
tests/base/: test_adat_metadata_helpers.py
tests/data/: control_data.adat  test_lift.py
tests/io/adat/: test_file.py
tests/io/annotations/: test_file.py
tests/tools/: test_adat_concatenation.py  test_adat_concatenation_utils.py
