[tool.poetry]
name = "somadata"
version = "1.2.0"
description = "SomaLogic Python Data Input/Output Library"
authors = [
    "Joseph Allison",
    "Ted Johnson",
    "Kah Young"
    ]
maintainers = [
    "Standard BioTools <support@somalogic.com>"
]
license = "MIT"
readme = "README.md"
include = [
    { path = "somadata/data/lift.zip" },
    { path = "*.adat" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
homepage = "https://www.standardbio.com/"
repository = "https://github.com/SomaLogic/Canopy"

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.1.2"
numpy = ">=1.19"
openpyxl = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
codespell = "^2.2.6"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
