[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "somadata"
version = "1.2.4"
description = "SomaLogic Python Data Input/Output Library"
homepage = "https://www.standardbio.com/"
repository = "https://github.com/SomaLogic/Canopy"
authors = [
    "Joseph Allison",
    "Ted Johnson",
    "Kah Young"
]
keywords = ["somalogic", "bioinformatics", "proteomics", "canopy", "adat"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

include = [
    { path = "somadata/data/lift.zip" },
    { path = "*.adat" }
]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.1.2"
numpy = ">=1.19"
openpyxl = ">=3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
codespell = "^2.2.6"
pytest-cov = "^6.0.0"

[tools.poetry.urls]
issues = "https://github.com/SomaLogic/Canopy/issues"
email = "support@somalogic.com"
